--- a/cv.html
+++ b/cv.html
@@ -246,10 +246,10 @@
     <section id="cv">
         <button class="cvLink"><h2>show my CV</h2></button>
         <div class="container cvToggle">
-            <img src="cv.jpg" alt="">
+            <img src="cvportfolio.jpg" alt="">
         </div>
         <div class="downloadCV">
-            <a href="cv-pdf.pdf" target="__blank">Get CV PDF Copy</a>
+            <a href="https://photos.app.goo.gl/kZcge1wWYcy2tq96A" target="__blank">Get CV PDF Copy</a>
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
